WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
20349
WTF::initializeThreading() fails if threading is already initialized
https://bugs.webkit.org/show_bug.cgi?id=20349
Summary
WTF::initializeThreading() fails if threading is already initialized
Alp Toker
Reported
2008-08-11 15:47:34 PDT
If g_thread_init() is called by the application developer before WTF::initializeThreading(), some of the necessary JavaScriptCore threading initialization is skipped. Fix attached.
Attachments
Fix initialization logic
(1.58 KB, patch)
2008-08-11 15:50 PDT
,
Alp Toker
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2008-08-11 15:50:10 PDT
Created
attachment 22734
[details]
Fix initialization logic
Eric Seidel (no email)
Comment 2
2008-08-12 17:05:20 PDT
Comment on
attachment 22734
[details]
Fix initialization logic Looks good.
Jan Alonzo
Comment 3
2008-08-13 13:01:20 PDT
landed in
r35726
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug