2008-08-13  Alp Toker  <alp@nuanti.com>

Reviewed by Eric Seidel.

        https://bugs.webkit.org/show_bug.cgi?id=20349
        WTF::initializeThreading() fails if threading is already initialized

        Fix threading initialization logic to support cases where
        g_thread_init() has already been called elsewhere.

        Resolves database-related crashers reported in several applications.

        * wtf/ThreadingGtk.cpp:
        (WTF::initializeThreading):

Canonical link: https://commits.webkit.org/28135@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35726 268f45cc-cd09-0410-ab3c-d52691b4dbfc